--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -28,7 +28,7 @@
         <div class="flex items-center justify-between">
           <div>
             <p class="text-sm text-gray-500">Website Visits</p>
-            <h2 class="text-xl font-bold">{{ statistics.visits || "-" }}</h2>
+            <h2 class="text-lg font-bold">{{ statistics.visits || "-" }}</h2>
           </div>
           <mat-icon class="text-blue-500">store</mat-icon>
         </div>
@@ -41,7 +41,7 @@
         <div class="flex items-center justify-between">
           <div>
             <p class="text-sm text-gray-500">Registered Users</p>
-            <h2 class="text-xl font-bold">{{ statistics.users || "-" }}</h2>
+            <p class="text-lg font-bold">{{ statistics.users || "-" }}</p>
           </div>
           <mat-icon class="text-green-500">person_add</mat-icon>
         </div>
@@ -54,9 +54,9 @@
         <div class="flex items-center justify-between">
           <div>
             <p class="text-sm text-gray-500">Revenue</p>
-            <h2 class="text-xl font-bold">
+            <p class="text-lg font-bold">
               {{ statistics.revenue ? "Ksh. " + statistics.revenue : "-" }}
-            </h2>
+            </p>
           </div>
           <mat-icon class="text-yellow-500">attach_money</mat-icon>
         </div>
@@ -69,7 +69,7 @@
         <div class="flex items-center justify-between">
           <div>
             <p class="text-sm text-gray-500">Orders</p>
-            <h2 class="text-xl font-bold">{{ statistics.orders || "-" }}</h2>
+            <p class="text-lg font-bold">{{ statistics.orders || "-" }}</p>
           </div>
           <mat-icon class="text-purple-500">shop_two</mat-icon>
         </div>
