--- a/src/app/components/payments/payments.component.html
+++ b/src/app/components/payments/payments.component.html
@@ -11,7 +11,7 @@
           [disabled]="isLoading || !hasPaybillChanges()"
         >
           <mat-icon *ngIf="isLoading">hourglass_empty</mat-icon>
-          Save Changes
+          Save
         </button>
         <button
           mat-raised-button
@@ -69,7 +69,7 @@
           [disabled]="isLoading || !hasTillChanges()"
         >
           <mat-icon *ngIf="isLoading">hourglass_empty</mat-icon>
-          Save Changes
+          Save
         </button>
         <button
           mat-raised-button
