added facebook marketing

--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -81,7 +81,7 @@
           <span>Billing</span>
         </a>
         <a
-          *ngIf="isBusinessPackage"
+          *ngIf="isBusinessPackage && false"
           routerLink="/store-manager"
           (click)="onNavItemClick()"
           class="text-gray-300 hover:bg-gray-700 hover:text-white flex items-center my-2 ml-2 p-2"
